--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,21 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#93e6fc",
-        "activityBar.background": "#93e6fc",
-        "activityBar.foreground": "#15202b",
-        "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#fa45d4",
+        "activityBar.activeBackground": "#fd6f6f",
+        "activityBar.background": "#f70000",
+        "activityBar.foreground": "#ffffff",
+        "activityBar.inactiveForeground": "#ffffff99",
+        "activityBarBadge.background": "#d59b9b",
         "activityBarBadge.foreground": "#15202b",
-        "commandCenter.border": "#15202b99",
-        "sash.hoverBorder": "#93e6fc",
-        "statusBar.background": "#61dafb",
-        "statusBar.foreground": "#15202b",
+        "commandCenter.border": "#ffffff99",
+        "sash.hoverBorder": "#ffffff",
+        "statusBar.background": "#ff0000",
+        "statusBar.foreground": "#fcfcfc", 
         "statusBarItem.hoverBackground": "#2fcefa",
-        "statusBarItem.remoteBackground": "#61dafb",
-        "statusBarItem.remoteForeground": "#15202b",
-        "titleBar.activeBackground": "#61dafb",
-        "titleBar.activeForeground": "#15202b",
-        "titleBar.inactiveBackground": "#61dafb99",
-        "titleBar.inactiveForeground": "#15202b99"
-    },
-    "peacock.color": "#61dafb"
+        "statusBarItem.remoteBackground": "#ff0000",
+        "statusBarItem.remoteForeground": "#ffffff",
+        "titleBar.activeBackground": "#ff0000",
+        "titleBar.activeForeground": "#ffffff",
+        "titleBar.inactiveBackground": "#ffffff99",
+        "titleBar.inactiveForeground": "#ffffff99"
+    }
 }
